# DevConductor

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  bootstrap.ps1  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  __main__.py  cli.py
backend/app/adapters/: __init__.py  base.py  codex.py  exceptions.py
backend/app/execution/: __init__.py  command_runner.py  exceptions.py
backend/app/orchestrator/: __init__.py  exceptions.py  single_worker.py
backend/app/schemas/: __init__.py  agent.py  base.py  command.py  run.py  task.py  verification.py  workspace.py
backend/app/verifier/: __init__.py  verifier.py
backend/app/workspace/: __init__.py  exceptions.py  manager.py
backend/tests/: test_agent_schema.py  test_cli.py  test_codex_adapter.py  test_command_runner.py  test_command_schema.py  test_run_schema.py  test_single_worker_run.py  test_task_schema.py  test_verifier.py  test_workspace_manager.py
docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_CONTEXT.md
scripts/: finish-stage.ps1  lib.ps1  new-codex-task.ps1  project-status.ps1  start-stage.ps1  verify.ps1
tasks/: example-task.yaml
