[project]
name = "dev-conductor"
version = "0.1.0"
description = "Human-led multi-agent software engineering orchestration platform."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.scripts]
devconductor = "backend.app.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false
